manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "evoucherks-backend-dev"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "evoucherks-backend-dev"
  template:
    metadata:
      labels:
        app: "evoucherks-backend-dev"
    spec:
      containers:
        - name: "evoucherks-backend-dev"
          image: "evouchercr.azurecr.io/evoucher-backend-dev"
          ports:
            - containerPort: 3000
              protocol: TCP
