manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "evoucherks-backend-dev"
    labels:
        app: "evoucherks-backend-dev"
spec:
    type: LoadBalancer
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    selector:
        app: "evoucherks-backend-dev"
